--- a/LibriVox/StoryBoard/Discover.storyboard
+++ b/LibriVox/StoryBoard/Discover.storyboard
@@ -763,11 +763,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="28187" translatesAutoresizingMaskIntoConstraints="NO" id="uoZ-gY-XOm" customClass="BlurredImageView" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="-59" width="393" height="329"/>
+                                <rect key="frame" x="0.0" y="-100" width="393" height="364"/>
                                 <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="329" id="v1T-RB-kjN"/>
-                                </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="28187" translatesAutoresizingMaskIntoConstraints="NO" id="BqQ-RH-DeQ" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
                                 <rect key="frame" x="16" y="20" width="142" height="230"/>
@@ -838,20 +835,20 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Synopses" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2EF-E9-WnD">
-                                <rect key="frame" x="16" y="299" width="361" height="20.666666666666686"/>
+                                <rect key="frame" x="16" y="281" width="361" height="20.666666666666686"/>
                                 <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3H-Y0-UCq">
-                                <rect key="frame" x="16" y="329.66666666666669" width="361" height="20.666666666666686"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3H-Y0-UCq">
+                                <rect key="frame" x="16" y="311.66666666666669" width="361" height="134"/>
                                 <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
-                                <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rRa-6w-Ngk">
-                                <rect key="frame" x="0.0" y="396" width="393" height="456"/>
+                                <rect key="frame" x="0.0" y="491.33333333333326" width="393" height="360.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SectionsCell" id="4X0-5L-oM6" customClass="SectionsCell" customModule="LibriVox" customModuleProvider="target">
@@ -912,13 +909,28 @@
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sections" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WsV-Ie-0eX">
-                                <rect key="frame" x="16" y="365.33333333333331" width="357" height="20.666666666666686"/>
+                                <rect key="frame" x="16" y="460.66666666666669" width="357" height="20.666666666666686"/>
                                 <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MKR-gU-dVx">
                                 <rect key="frame" x="255" y="40" width="122" height="20.666666666666671"/>
+                                <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bn2-N2-AyB">
+                                <rect key="frame" x="183" y="160.66666666666666" width="71.333333333333314" height="20.666666666666657"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="71.329999999999998" id="MZL-3Z-zFO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Portuguese" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RUn-HA-qwg">
+                                <rect key="frame" x="262.33333333333331" y="160.66666666666666" width="114.66666666666669" height="21"/>
                                 <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -932,14 +944,17 @@
                             <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="Afh-3e-fIw" secondAttribute="trailing" constant="16" id="0SR-xh-5ZT"/>
                             <constraint firstAttribute="trailing" secondItem="I3H-Y0-UCq" secondAttribute="trailing" constant="16" id="0VK-1P-R94"/>
                             <constraint firstItem="Rq7-th-1iH" firstAttribute="bottom" secondItem="rRa-6w-Ngk" secondAttribute="bottom" id="1Yi-29-zR1"/>
+                            <constraint firstItem="RUn-HA-qwg" firstAttribute="firstBaseline" secondItem="bn2-N2-AyB" secondAttribute="firstBaseline" id="26E-kg-hvR"/>
                             <constraint firstItem="uoZ-gY-XOm" firstAttribute="leading" secondItem="Rq7-th-1iH" secondAttribute="leading" id="2sc-m4-J8D"/>
                             <constraint firstItem="Afh-3e-fIw" firstAttribute="leading" secondItem="AwZ-5T-BQQ" secondAttribute="trailing" constant="5" id="4V7-kc-lEz"/>
+                            <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="RUn-HA-qwg" secondAttribute="trailing" constant="16" id="4ji-yy-vee"/>
                             <constraint firstItem="WJx-0e-0gz" firstAttribute="leading" secondItem="BqQ-RH-DeQ" secondAttribute="trailing" constant="25" id="6f4-Bi-Aqd"/>
                             <constraint firstItem="oeW-Ob-d0u" firstAttribute="leading" secondItem="WJx-0e-0gz" secondAttribute="trailing" constant="5" id="6rR-Xb-nhS"/>
                             <constraint firstItem="WJx-0e-0gz" firstAttribute="top" secondItem="Ome-aY-r6e" secondAttribute="bottom" constant="10" id="8UH-wQ-Hzm"/>
                             <constraint firstItem="rRa-6w-Ngk" firstAttribute="leading" secondItem="Rq7-th-1iH" secondAttribute="leading" id="8tH-17-tI4"/>
                             <constraint firstItem="I3H-Y0-UCq" firstAttribute="leading" secondItem="Rq7-th-1iH" secondAttribute="leading" constant="16" id="BXp-F2-NLe"/>
                             <constraint firstItem="Ome-aY-r6e" firstAttribute="leading" secondItem="BqQ-RH-DeQ" secondAttribute="trailing" constant="25" id="E0S-8K-Lmx"/>
+                            <constraint firstItem="bn2-N2-AyB" firstAttribute="leading" secondItem="BqQ-RH-DeQ" secondAttribute="trailing" constant="25" id="JR8-5g-9Dv"/>
                             <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="2EF-E9-WnD" secondAttribute="trailing" constant="16" id="Kvj-Bj-ZaS"/>
                             <constraint firstItem="2EF-E9-WnD" firstAttribute="leading" secondItem="Rq7-th-1iH" secondAttribute="leading" constant="16" id="LQF-dD-yiI"/>
                             <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="LB6-7b-kqg" secondAttribute="trailing" constant="16" id="LaM-Pg-FiL"/>
@@ -948,15 +963,18 @@
                             <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="maU-nG-kv0" secondAttribute="trailing" constant="16" id="RO5-Aj-5U4"/>
                             <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="oeW-Ob-d0u" secondAttribute="trailing" constant="16" id="RVI-4w-Mw3"/>
                             <constraint firstItem="MKR-gU-dVx" firstAttribute="bottom" secondItem="Ome-aY-r6e" secondAttribute="bottom" id="Rit-dv-CLG"/>
+                            <constraint firstItem="RUn-HA-qwg" firstAttribute="leading" secondItem="bn2-N2-AyB" secondAttribute="trailing" constant="8" id="Sjm-KG-5fO"/>
                             <constraint firstItem="KGe-JO-Air" firstAttribute="leading" secondItem="BqQ-RH-DeQ" secondAttribute="trailing" constant="25" id="UQu-tR-Oq0"/>
                             <constraint firstItem="oeW-Ob-d0u" firstAttribute="top" secondItem="Ome-aY-r6e" secondAttribute="bottom" constant="10.000000000000028" id="Vd2-0Z-0DI"/>
                             <constraint firstItem="rRa-6w-Ngk" firstAttribute="top" secondItem="WsV-Ie-0eX" secondAttribute="bottom" constant="10" id="WUc-dp-VVr"/>
+                            <constraint firstItem="RUn-HA-qwg" firstAttribute="top" secondItem="KGe-JO-Air" secondAttribute="bottom" constant="8" symbolic="YES" id="WWA-V5-CrX"/>
+                            <constraint firstItem="uoZ-gY-XOm" firstAttribute="baseline" secondItem="2EF-E9-WnD" secondAttribute="firstBaseline" constant="-32" id="XOB-63-Jp4"/>
                             <constraint firstItem="maU-nG-kv0" firstAttribute="centerY" secondItem="KGe-JO-Air" secondAttribute="centerY" id="ZZT-et-rRk"/>
                             <constraint firstItem="AwZ-5T-BQQ" firstAttribute="top" secondItem="oeW-Ob-d0u" secondAttribute="bottom" constant="10.000000000000057" id="ZcB-3H-Wyu"/>
                             <constraint firstItem="WsV-Ie-0eX" firstAttribute="leading" secondItem="Rq7-th-1iH" secondAttribute="leading" constant="16" id="aBI-JF-Z85"/>
+                            <constraint firstItem="bn2-N2-AyB" firstAttribute="top" secondItem="KGe-JO-Air" secondAttribute="bottom" constant="8" id="bNi-2p-zS1"/>
                             <constraint firstItem="maU-nG-kv0" firstAttribute="leading" secondItem="KGe-JO-Air" secondAttribute="trailing" constant="5" id="c2T-fN-eca"/>
                             <constraint firstItem="BqQ-RH-DeQ" firstAttribute="leading" secondItem="Rq7-th-1iH" secondAttribute="leading" constant="16" id="cA1-9M-Ojn"/>
-                            <constraint firstItem="2EF-E9-WnD" firstAttribute="top" secondItem="BqQ-RH-DeQ" secondAttribute="bottom" constant="49" id="ecz-iB-9XD"/>
                             <constraint firstAttribute="trailing" secondItem="uoZ-gY-XOm" secondAttribute="trailing" id="fVz-h0-k6g"/>
                             <constraint firstItem="MKR-gU-dVx" firstAttribute="leading" secondItem="Ome-aY-r6e" secondAttribute="trailing" constant="8" id="h4h-kt-1ad"/>
                             <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="rRa-6w-Ngk" secondAttribute="trailing" id="he4-ZK-UmH"/>
@@ -964,8 +982,9 @@
                             <constraint firstItem="WsV-Ie-0eX" firstAttribute="top" secondItem="I3H-Y0-UCq" secondAttribute="bottom" constant="15" id="nRl-iX-ilW"/>
                             <constraint firstItem="KGe-JO-Air" firstAttribute="top" secondItem="AwZ-5T-BQQ" secondAttribute="bottom" constant="10" id="nV9-ha-Fjh"/>
                             <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="WsV-Ie-0eX" secondAttribute="trailing" constant="20" id="pJU-bj-ppv"/>
+                            <constraint firstItem="uoZ-gY-XOm" firstAttribute="baseline" secondItem="LB6-7b-kqg" secondAttribute="firstBaseline" constant="64" id="tZx-jm-HsK"/>
                             <constraint firstItem="AwZ-5T-BQQ" firstAttribute="leading" secondItem="BqQ-RH-DeQ" secondAttribute="trailing" constant="25" id="uS4-Mt-DGn"/>
-                            <constraint firstItem="uoZ-gY-XOm" firstAttribute="top" secondItem="Rq7-th-1iH" secondAttribute="top" constant="-59" id="v3Y-oM-UOs"/>
+                            <constraint firstItem="uoZ-gY-XOm" firstAttribute="top" secondItem="Rq7-th-1iH" secondAttribute="top" constant="-100" id="v3Y-oM-UOs"/>
                             <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="MKR-gU-dVx" secondAttribute="trailing" constant="16" id="ydH-x6-ej1"/>
                             <constraint firstItem="BqQ-RH-DeQ" firstAttribute="top" secondItem="Rq7-th-1iH" secondAttribute="top" constant="20" id="zdp-II-ypE"/>
                         </constraints>
@@ -980,13 +999,14 @@
                         <outlet property="descrBook" destination="I3H-Y0-UCq" id="ahd-2U-R1Q"/>
                         <outlet property="durationBook" destination="MKR-gU-dVx" id="aE8-zP-jeY"/>
                         <outlet property="genreBook" destination="oeW-Ob-d0u" id="Kxg-p1-xi2"/>
+                        <outlet property="languageBook" destination="RUn-HA-qwg" id="Q1W-pp-zKb"/>
                         <outlet property="numSectionsBook" destination="maU-nG-kv0" id="69a-Vl-Hvw"/>
                         <outlet property="sectionsTV" destination="rRa-6w-Ngk" id="WVr-WE-MT1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zry-on-kYx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7563" y="725"/>
+            <point key="canvasLocation" x="7562.5954198473282" y="724.64788732394368"/>
         </scene>
         <!--ScroolView-->
         <scene sceneID="0nY-Sl-AGd">
@@ -1038,6 +1058,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="3jN-72-nl0" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" itemPositioning="centered" id="gu7-43-KHA">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="selectedImageTintColor" name="Lighter Blue Tone"/>
