--- a/LibriVox/StoryBoard/Discover.storyboard
+++ b/LibriVox/StoryBoard/Discover.storyboard
@@ -103,7 +103,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="DCQ-Gy-epU">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AuthorsCell" id="DCQ-Gy-epU">
                                         <rect key="frame" x="0.0" y="0.0" width="95" height="136"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="V02-9f-scq">
@@ -136,6 +136,9 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <segue destination="h0M-ZW-0Tk" kind="show" identifier="showAuthor" id="QqL-zu-y1L"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -216,8 +219,9 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Seach by a book" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2kQ-zL-BTo">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Seach by title" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2kQ-zL-BTo">
                                 <rect key="frame" x="16" y="100.66666666666667" width="361" height="26.333333333333329"/>
+                                <color key="tintColor" name="Main Blue Tone"/>
                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <connections>
@@ -648,41 +652,44 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8bW-7Y-Xpn" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
-                                                    <rect key="frame" x="23" y="15" width="110" height="172"/>
+                                                    <rect key="frame" x="23" y="10" width="110" height="182"/>
                                                     <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="110" id="cIN-CW-FjW"/>
-                                                        <constraint firstAttribute="height" constant="172" id="ofa-0K-5e2"/>
+                                                        <constraint firstAttribute="height" constant="182" id="ofa-0K-5e2"/>
                                                     </constraints>
                                                 </imageView>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UVV-Em-v4m" customClass="RoundView" customModule="LibriVox" customModuleProvider="target">
-                                                    <rect key="frame" x="109" y="0.0" width="35" height="35"/>
-                                                    <color key="backgroundColor" name="Main Blue Tone"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="35" id="REb-h2-xhl"/>
-                                                        <constraint firstAttribute="height" constant="35" id="tSV-vq-aTI"/>
-                                                    </constraints>
-                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Percy Jackson: Visitou Morpheus" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSR-JH-auc">
                                                     <rect key="frame" x="0.0" y="197" width="156" height="39"/>
                                                     <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DEx-Zn-TBX" customClass="FavoritesToggleBtn" customModule="LibriVox" customModuleProvider="target">
+                                                    <rect key="frame" x="106" y="0.0" width="35" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="qvL-Zt-Iqf"/>
+                                                        <constraint firstAttribute="width" constant="35" id="x2S-6w-ghm"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="tinted"/>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="RSR-JH-auc" secondAttribute="trailing" id="H2H-3b-2Qe"/>
-                                                <constraint firstItem="UVV-Em-v4m" firstAttribute="top" secondItem="LGh-Cn-fbY" secondAttribute="top" id="Sqn-uT-fTa"/>
-                                                <constraint firstAttribute="trailing" secondItem="UVV-Em-v4m" secondAttribute="trailing" constant="12" id="Xwf-qW-O3h"/>
+                                                <constraint firstAttribute="trailing" secondItem="DEx-Zn-TBX" secondAttribute="trailing" constant="15" id="UTp-lw-QAw"/>
+                                                <constraint firstItem="DEx-Zn-TBX" firstAttribute="top" secondItem="LGh-Cn-fbY" secondAttribute="top" id="Yan-b6-kFq"/>
                                                 <constraint firstAttribute="bottom" secondItem="RSR-JH-auc" secondAttribute="bottom" id="Zmd-3n-0Dd"/>
                                                 <constraint firstItem="8bW-7Y-Xpn" firstAttribute="centerX" secondItem="LGh-Cn-fbY" secondAttribute="centerX" id="bBk-hg-k8U"/>
-                                                <constraint firstItem="RSR-JH-auc" firstAttribute="top" secondItem="8bW-7Y-Xpn" secondAttribute="bottom" constant="10" id="bNU-HF-yAz"/>
+                                                <constraint firstItem="RSR-JH-auc" firstAttribute="top" secondItem="8bW-7Y-Xpn" secondAttribute="bottom" constant="5" id="bNU-HF-yAz"/>
+                                                <constraint firstItem="8bW-7Y-Xpn" firstAttribute="top" secondItem="LGh-Cn-fbY" secondAttribute="top" constant="10" id="d1m-qh-KMd"/>
                                                 <constraint firstItem="RSR-JH-auc" firstAttribute="leading" secondItem="LGh-Cn-fbY" secondAttribute="leading" id="jIh-4O-9jY"/>
-                                                <constraint firstItem="8bW-7Y-Xpn" firstAttribute="top" secondItem="UVV-Em-v4m" secondAttribute="bottom" constant="-20" id="vXf-h1-hcd"/>
+                                                <constraint firstItem="8bW-7Y-Xpn" firstAttribute="top" secondItem="DEx-Zn-TBX" secondAttribute="bottom" constant="-25" id="yq7-lD-fWQ"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="imageBook" destination="8bW-7Y-Xpn" id="Vyq-ow-tcV"/>
+                                            <outlet property="isFav" destination="DEx-Zn-TBX" id="Pc4-p8-MI7"/>
                                             <outlet property="titleBook" destination="RSR-JH-auc" id="bVl-uS-svb"/>
                                             <segue destination="lgZ-vp-vZD" kind="show" identifier="showDetailsPage" id="IIQ-Pi-tG0"/>
                                         </connections>
@@ -721,7 +728,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TwU-2h-jca" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6825" y="0.0"/>
+            <point key="canvasLocation" x="6823.6641221374039" y="0.0"/>
         </scene>
         <!--Percy Jackson: The Lighthing Thief-->
         <scene sceneID="0xT-1w-Kg0">
@@ -1185,18 +1192,22 @@ asdadnasd</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iX5-Du-fQI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="987" y="1396"/>
+            <point key="canvasLocation" x="4105" y="1791"/>
         </scene>
     </scenes>
     <designables>
         <designable name="BqQ-RH-DeQ">
             <size key="intrinsicContentSize" width="305" height="475"/>
         </designable>
+        <designable name="DEx-Zn-TBX">
+            <size key="intrinsicContentSize" width="61" height="43.666666666666664"/>
+        </designable>
         <designable name="uoZ-gY-XOm">
             <size key="intrinsicContentSize" width="305" height="475"/>
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
+        <segue reference="QqL-zu-y1L"/>
         <segue reference="IIQ-Pi-tG0"/>
         <segue reference="vDx-pZ-vS1"/>
     </inferredMetricsTieBreakers>
